V3.0: experimental source-only build, README/legal updates, refactor weather & battery