@@ -18,50 +18,33 @@ import java.time.ZoneId;
 import java.util.*;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
 /**
- * Copyright 2024 Guido Zeuner
+ * Copyright 2025 Guido Zeuner - https://tiny-tool.de
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ * ...
  *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- *
- * © 2024 - Guido Zeuner - https://tiny-tool.de
- */
-
-/**
- * Utility class providing helper methods for charging-related operations,
- * such as schedule validation, capacity calculations, and period optimization.
+ * Collection of charging-related helper functions: schedule validation, dynamic thresholds,
+ * RSOC projections, and wait/defer heuristics used by the management service.
  */
 @Component
 public class ChargingUtils {
-
-    // Date format for logging timestamps
     private static final DateFormat DATE_FORMAT = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss", Locale.getDefault());
-    // Seconds per hour constant for capacity calculations
     private static final double SECONDS_PER_HOUR = 3600.0;
-    // Minimum offset for dynamic threshold adjustments
     private static final double MINIMUM_THRESHOLD_OFFSET = 0.05;
-    // Minimum number of charging periods to ensure
     private static final int MINIMUM_CHARGING_PERIODS = 2;
 
     @Value("${BATTERY_MAX_CAPACITY:10000}")
-    private int maxCapacityInWatt;
+    private int maxCapacityInWatt; // Wh
 
     @Value("${battery.target.stateOfCharge:90}")
     private int targetStateOfCharge;
 
-    @Value("${battery.chargingPoint}")
+    @Value("${battery.inverter.max.watts:4600}")
     private int chargingPointInWatt;
 
     @Value("${marketdata.price.flexibility.threshold:10}")
@@ -70,11 +53,39 @@ public class ChargingUtils {
     @Value("${marketdata.acceptable.price.cents:15}")
     private int maxAcceptableMarketPriceInCent;
 
-    @Value("${battery.nightChargingIdle:true}")
+    @Value("${battery.nightChargingIdle:false}")
     private boolean nightChargingIdle;
+
+    @Value("${battery.handback.debounce.ms:60000}")
+    private long handBackDebounceMs;
+
+    // Decision parameters for the "wait" heuristic ---
+    /** Minimum absolute price advantage (ct/kWh) required before waiting is considered. */
+    @Value("${scheduling.wait.min.savings.ct:1.0}")
+    private double waitMinSavingsCt;
+
+    /** Minimum relative price advantage (e.g. 0.05 = 5%). */
+    @Value("${scheduling.wait.min.savings.pct:0.05}")
+    private double waitMinSavingsPct;
+
+    /** Maximum delay in minutes we accept while waiting for a cheaper window. */
+    @Value("${scheduling.wait.max.delay.minutes:120}")
+    private int waitMaxDelayMinutes;
+
+    /** RSOC safety floor (%) we should not undershoot while waiting. */
+    @Value("${battery.rsoc.min.floor:15}")
+    private int rsocMinFloor;
+
+    /** Fallback hourly RSOC drop (%) when history is missing or not meaningful. */
+    @Value("${battery.rsoc.drop.default.per.hour:3.0}")
+    private double defaultRsocDropPerHour;
+
+    private final AtomicLong lastHandBackTs = new AtomicLong(0L);
 
     @Autowired
     private BatteryManagementService batteryManagementService;
+
+    // ---- validation & calculations (existing) ----
 
     public boolean isValidSchedule(ChargingSchedule schedule, long currentTime, Set<ChargingSchedule> validatedSchedules, List<MarketPrice> marketPrices) {
         return !isScheduleExpired(schedule, currentTime) &&
@@ -86,7 +97,7 @@ public class ChargingUtils {
     public double calculateRequiredCapacity(int currentRsoc) {
         double currentCapacity = currentRsoc * maxCapacityInWatt / 100.0;
         double targetCapacity = targetStateOfCharge * maxCapacityInWatt / 100.0;
-        return targetCapacity - currentCapacity;
+        return targetCapacity - currentCapacity; // Wh
     }
 
     public int calculateRequiredPeriods(double requiredCapacity, int totalPeriods) {
@@ -95,47 +106,33 @@ public class ChargingUtils {
     }
 
     public List<ChargingSchedule> getFutureChargingSchedules(List<ChargingSchedule> schedules, long currentTime) {
-        List<ChargingSchedule> futureSchedules = schedules.stream()
+        return schedules.stream()
                 .filter(schedule -> schedule.getEndTimestamp() > currentTime)
                 .sorted(Comparator.comparingLong(ChargingSchedule::getStartTimestamp))
                 .collect(Collectors.toList());
-        if (futureSchedules.isEmpty()) {
-            LogFilter.logInfo(ChargingUtils.class, "No future schedules found. Ensure the calling code handles this scenario gracefully.");
-        }
-        return futureSchedules;
     }
 
     public void handleAutomaticModeTransition(long currentTimeMillis) {
-
-        if (batteryManagementService.isManualIdleActive()) {
-            return;
-        }
+        if (batteryManagementService.isManualIdleActive()) return;
 
         boolean isNight = isNight(currentTimeMillis);
         int currentRsoc = batteryManagementService.getRelativeStateOfCharge();
-        LogFilter.logInfo(ChargingUtils.class, "Current time: {}, isNight: {}, RSOC: {}%, Target RSOC: {}%",
-                currentTimeMillis, isNight, currentRsoc, targetStateOfCharge);
 
         if (currentRsoc >= targetStateOfCharge) {
-            String mode = isNight ? "Nighttime" : "Daytime";
+            long last = lastHandBackTs.get();
+            long now = System.currentTimeMillis();
+            if (now - last < handBackDebounceMs) return;
+
             if (isNight && nightChargingIdle) {
-                LogFilter.logInfo(ChargingUtils.class, "{} and RSOC target reached. Setting dynamic charging point to 0.", mode);
-                batteryManagementService.setDynamicChargingPoint(0);
+                if (batteryManagementService.resetToAutomaticMode()) lastHandBackTs.set(now);
             } else if (!isNight) {
-                LogFilter.logInfo(ChargingUtils.class, "{} and RSOC target reached. Returning to Automatic Mode.", mode);
-                batteryManagementService.resetToAutomaticMode();
-            } else {
-                LogFilter.logDebug(ChargingUtils.class, "Nighttime with nightChargingIdle=false, no action taken.");
+                if (batteryManagementService.resetToAutomaticMode()) lastHandBackTs.set(now);
             }
         }
     }
 
-    // Getter for the night charging idle flag
-    public boolean isNightChargingIdle() {
-        return nightChargingIdle;
-    }
+    public boolean isNightChargingIdle() { return nightChargingIdle; }
 
-    // Setter for the night charging idle flag
     public void setNightChargingIdle(boolean nightChargingIdle) {
         this.nightChargingIdle = nightChargingIdle;
         LogFilter.logInfo(ChargingManagementService.class, "Night charging idle mode set to: {}", nightChargingIdle);
@@ -150,43 +147,32 @@ public class ChargingUtils {
         ZonedDateTime nightStart = currentTime.withHour(nightStartHour).withMinute(0).withSecond(0).withNano(0);
         ZonedDateTime nightEnd = currentTime.withHour(nightEndHour).withMinute(0).withSecond(0).withNano(0);
 
-        // Handle date adjustment for night period crossing midnight
         if (nightStartHour > nightEndHour) {
-            // Night crosses midnight
             if (currentTime.getHour() < nightEndHour) {
-                // Current time is after midnight but before nightEndHour
-                nightStart = nightStart.minusDays(1); // Set nightStart to previous day
+                nightStart = nightStart.minusDays(1);
             } else {
-                // Current time is before midnight, so nightEnd is next day
                 nightEnd = nightEnd.plusDays(1);
             }
         } else if (nightStartHour == nightEndHour) {
-            // If start and end hours are equal, assume full 24-hour period
             return true;
         }
 
-        boolean isNight = !currentTime.isBefore(nightStart) && currentTime.isBefore(nightEnd);
-        LogFilter.logDebug(ChargingUtils.class, "Night period: Start={}, End={}, Current={} -> isNight={}", nightStart, nightEnd, currentTime, isNight);
-        return isNight;
+        return !currentTime.isBefore(nightStart) && currentTime.isBefore(nightEnd);
     }
 
-    public void createAndLogChargingSchedule(MarketPrice period, ChargingScheduleRepository repository, DateFormat dateFormat) {
+    public void createAndLogChargingSchedule(MarketPrice period, ChargingScheduleRepository repository, java.text.DateFormat dateFormat) {
         ChargingSchedule schedule = convertToChargingSchedule(period);
         repository.save(schedule);
-        LogFilter.logInfo(ChargingUtils.class, "Added new charging period: {} - {} (%.2f cents/kWh).",
+        LogFilter.logInfo(ChargingUtils.class, "Added new charging period: {} - {} ({} cents/kWh).",
                 dateFormat.format(new Date(period.getStartTimestamp())),
-                dateFormat.format(new Date(period.getEndTimestamp())), period.getPriceInCentPerKWh());
+                dateFormat.format(new Date(period.getEndTimestamp())),
+                String.format("%.2f", period.getPriceInCentPerKWh()));
     }
 
     public double calculatePriceRange(List<MarketPrice> periods) {
-        if (periods == null || periods.isEmpty()) {
-            LogFilter.logWarn(ChargingUtils.class, "Market price periods list is empty or null. Returning price range: 0.0.");
-            return 0.0;
-        }
+        if (periods == null || periods.isEmpty()) return 0.0;
         double[] prices = periods.stream().mapToDouble(MarketPrice::getPriceInCentPerKWh).sorted().toArray();
-        double range = prices[prices.length - 1] - prices[0];
-        LogFilter.logInfo(ChargingUtils.class, "Calculated price range: %.2f (min: %.2f, max: %.2f).", range, prices[0], prices[prices.length - 1]);
-        return range;
+        return prices[prices.length - 1] - prices[0];
     }
 
     public ChargingSchedule convertToChargingSchedule(MarketPrice price) {
@@ -209,19 +195,13 @@ public class ChargingUtils {
         List<MarketPrice> sorted = nighttimePeriods.stream()
                 .sorted(Comparator.comparingDouble(MarketPrice::getPriceInCentPerKWh))
                 .collect(Collectors.toList());
-        double threshold = sorted.get(0).getPriceInCentPerKWh() + 2.0;
+        double threshold = sorted.get(0).getPriceInCentPerKWh() + 3.0;
         return sorted.stream().filter(p -> p.getPriceInCentPerKWh() <= threshold).limit(maxPeriods).collect(Collectors.toList());
     }
 
     public boolean exceedsDynamicThreshold(ChargingSchedule schedule, List<MarketPrice> marketPrices) {
         double threshold = calculateDynamicThreshold(marketPrices, priceFlexibilityThreshold);
-        if (schedule.getPrice() > threshold) {
-            LogFilter.logInfo(ChargingUtils.class, "Skipping schedule exceeding dynamic threshold: {} - {} at %.2f cents/kWh (threshold: %.2f cents/kWh).",
-                    DATE_FORMAT.format(new Date(schedule.getStartTimestamp())),
-                    DATE_FORMAT.format(new Date(schedule.getEndTimestamp())), schedule.getPrice(), threshold);
-            return true;
-        }
-        return false;
+        return schedule.getPrice() > threshold;
     }
 
     public double calculateDynamicThreshold(List<MarketPrice> prices, double defaultThreshold) {
@@ -232,62 +212,39 @@ public class ChargingUtils {
         double dynamicThreshold = medianPrice + defaultThreshold;
 
         if (range < 0.5) dynamicThreshold += stats[2] * 0.1;
-        else if (range > 2.0) dynamicThreshold -= stats[2] * 0.1;
+        else if (range > 3.0) dynamicThreshold -= stats[2] * 0.1;
 
-        dynamicThreshold = Math.max(dynamicThreshold, stats[0] + MINIMUM_THRESHOLD_OFFSET);
-        LogFilter.logInfo(ChargingUtils.class, "Calculated dynamic threshold: %.2f (median: %.2f, min: %.2f, max: %.2f, avg: %.2f, range: %.2f)",
-                dynamicThreshold, medianPrice, stats[0], stats[1], stats[2], range);
-        return dynamicThreshold;
+        return Math.max(dynamicThreshold, stats[0] + MINIMUM_THRESHOLD_OFFSET);
     }
 
     public double calculateMaxAcceptablePrice(double currentRsoc, double basePrice) {
         double rsocThreshold = targetStateOfCharge * 0.8;
         double priceMultiplier = 1.2;
-        double result = currentRsoc < rsocThreshold ? basePrice * priceMultiplier : basePrice;
-        LogFilter.logInfo(ChargingUtils.class, "RSOC (%.2f%%) is {} threshold (%.2f%%). {}", currentRsoc,
-                currentRsoc < rsocThreshold ? "below" : "above or equal to", rsocThreshold,
-                currentRsoc < rsocThreshold ? "Applying price multiplier: " + priceMultiplier : "Using base price: " + basePrice);
-        return result;
+        return currentRsoc < rsocThreshold ? basePrice * priceMultiplier : basePrice;
     }
 
     public int calculateDynamicDaytimeThreshold() {
         List<Map.Entry<Long, Integer>> history = batteryManagementService.getRsocHistory();
-        int fallbackThreshold = targetStateOfCharge - 20;
-
-        if (history.size() < 2) {
-            LogFilter.logInfo(ChargingUtils.class, "Insufficient RSOC history data. Using fallback threshold: {}%", fallbackThreshold);
-            return fallbackThreshold;
-        }
+        int fallback = targetStateOfCharge - 20;
+        if (history.size() < 2) return fallback;
 
         Map.Entry<Long, Integer> oldest = history.get(0);
         Map.Entry<Long, Integer> latest = history.get(history.size() - 1);
-        long timeDiffMinutes = (latest.getKey() - oldest.getKey()) / 60000;
+        long diffMin = (latest.getKey() - oldest.getKey()) / 60000;
+        if (diffMin <= 0) return fallback;
 
-        if (timeDiffMinutes <= 0) {
-            LogFilter.logWarn(ChargingUtils.class, "Invalid time difference in RSOC history. Using fallback threshold: {}%", fallbackThreshold);
-            return fallbackThreshold;
-        }
-
-        double rsocDropPerHour = (oldest.getValue() - latest.getValue()) / (timeDiffMinutes / 60.0);
-        int dynamicThreshold = (int) Math.max(targetStateOfCharge - (rsocDropPerHour * 2), targetStateOfCharge - 30);
-        dynamicThreshold = Math.min(dynamicThreshold, targetStateOfCharge);
-
-        LogFilter.logInfo(ChargingUtils.class, "RSOC drop rate: %.2f%%/hour. Dynamic daytime threshold calculated: {}%", rsocDropPerHour, dynamicThreshold);
-        return dynamicThreshold;
+        double dropPerHour = (oldest.getValue() - latest.getValue()) / (diffMin / 60.0);
+        int threshold = (int) Math.max(targetStateOfCharge - (dropPerHour * 2), targetStateOfCharge - 30);
+        return Math.min(threshold, targetStateOfCharge);
     }
 
     public boolean adjustForCheaperFutureSchedule(ChargingSchedule currentSchedule, List<ChargingSchedule> schedulesToEvaluate,
                                                   ChargingScheduleRepository repository) {
-        if (currentSchedule == null || schedulesToEvaluate == null || schedulesToEvaluate.isEmpty()) {
-            LogFilter.logWarn(ChargingUtils.class, "Invalid input: Current schedule or schedules to evaluate is null/empty.");
-            return false;
-        }
+        if (currentSchedule == null || schedulesToEvaluate == null || schedulesToEvaluate.isEmpty()) return false;
 
-        double dynamicTolerance = clampTolerance(calculateDynamicTolerance(schedulesToEvaluate, batteryManagementService.getRelativeStateOfCharge()));
+        double dynamicTolerance = clampTolerance(calculateDynamicTolerance(schedulesToEvaluate,
+                batteryManagementService.getRelativeStateOfCharge()));
         double priceTolerance = currentSchedule.getPrice() * dynamicTolerance;
-
-        LogFilter.logDebug(ChargingUtils.class, "Evaluating cheaper future schedules. Current price: %.2f, Dynamic tolerance: %.2f, Price tolerance: %.2f",
-                currentSchedule.getPrice(), dynamicTolerance, priceTolerance);
 
         Optional<ChargingSchedule> cheaperFuture = schedulesToEvaluate.stream()
                 .filter(s -> s.getStartTimestamp() > currentSchedule.getStartTimestamp())
@@ -298,162 +255,226 @@ public class ChargingUtils {
                 cheaperFuture.get().getStartTimestamp(), cheaperFuture.get().getEndTimestamp(), cheaperFuture.get().getPrice())) {
             ChargingSchedule newSchedule = copySchedule(cheaperFuture.get());
             repository.save(newSchedule);
-            LogFilter.logInfo(ChargingUtils.class, "Created new schedule for cheaper future option: {} - {} (price: %.2f cents/kWh).",
-                    DATE_FORMAT.format(new Date(newSchedule.getStartTimestamp())),
-                    DATE_FORMAT.format(new Date(newSchedule.getEndTimestamp())), newSchedule.getPrice());
             return true;
         }
-        LogFilter.logDebug(ChargingUtils.class, "No cheaper future schedules found to adjust the current schedule.");
         return false;
     }
 
     public Set<ChargingSchedule> collectAndOptimizeSchedules(List<MarketPrice> periods) {
-        if (periods == null || periods.isEmpty()) {
-            LogFilter.logWarn(ChargingUtils.class, "No periods provided for schedule collection. Returning an empty set.");
-            return Collections.emptySet();
-        }
-
+        if (periods == null || periods.isEmpty()) return Collections.emptySet();
         Set<ChargingSchedule> schedules = new HashSet<>();
-        for (MarketPrice period : periods) {
-            if (period.getStartTimestamp() < period.getEndTimestamp()) {
-                ChargingSchedule schedule = convertToChargingSchedule(period);
-                if (schedules.add(schedule)) {
-                    LogFilter.logDebug(ChargingUtils.class, "Added schedule: Start={}, End={}, Price=%.2f cents/kWh.",
-                            DATE_FORMAT.format(new Date(schedule.getStartTimestamp())),
-                            DATE_FORMAT.format(new Date(schedule.getEndTimestamp())), schedule.getPrice());
-                }
-            } else {
-                LogFilter.logWarn(ChargingUtils.class, "Invalid period detected: Start={}, End={}. Skipping.",
-                        period.getStartTimestamp(), period.getEndTimestamp());
-            }
+        for (MarketPrice p : periods) {
+            if (p.getStartTimestamp() < p.getEndTimestamp()) schedules.add(convertToChargingSchedule(p));
         }
-        LogFilter.logInfo(ChargingUtils.class, "Collected and optimized {} charging schedules.", schedules.size());
         return schedules;
     }
 
     public void removeExcessChargingPeriods(List<ChargingSchedule> existingSchedules, int periodsToRemove,
                                             ChargingScheduleRepository repository, Map<Long, ScheduledFuture<?>> scheduledTasks) {
         for (int i = 0; i < Math.min(periodsToRemove, existingSchedules.size()); i++) {
-            ChargingSchedule schedule = existingSchedules.get(existingSchedules.size() - 1 - i);
-            cancelTask(schedule.getId(), scheduledTasks);
-            repository.delete(schedule);
-            LogFilter.logInfo(ChargingUtils.class, "Removed charging period: {} - {}.",
-                    DATE_FORMAT.format(new Date(schedule.getStartTimestamp())),
-                    DATE_FORMAT.format(new Date(schedule.getEndTimestamp())));
+            ChargingSchedule s = existingSchedules.get(existingSchedules.size() - 1 - i);
+            cancelTask(s.getId(), scheduledTasks);
+            repository.delete(s);
         }
     }
 
     public void cancelTask(long scheduleId, Map<Long, ScheduledFuture<?>> scheduledTasks) {
         ScheduledFuture<?> task = scheduledTasks.remove(scheduleId);
-        if (task != null) {
-            task.cancel(true);
-            LogFilter.logInfo(ChargingUtils.class, "Cancelled scheduled task for schedule ID: {}", scheduleId);
-        }
+        if (task != null) task.cancel(true);
     }
 
     public void cleanUpExpiredSchedules(ChargingScheduleRepository repository, Map<Long, ScheduledFuture<?>> scheduledTasks) {
-        long currentTime = System.currentTimeMillis();
-        LogFilter.logInfo(ChargingUtils.class, "Starting cleanup of expired charging schedules...");
+        long now = System.currentTimeMillis();
 
-        List<ChargingSchedule> allSchedules = repository.findAll();
-        List<ChargingSchedule> expired = allSchedules.stream()
-                .filter(s -> s.getEndTimestamp() < currentTime)
-                .peek(s -> repository.delete(s))
-                .collect(Collectors.toList());
-        LogFilter.logInfo(ChargingUtils.class, "Expired schedules cleanup completed. Removed: {}", expired.size());
+        List<ChargingSchedule> all = repository.findAll();
+        all.stream().filter(s -> s.getEndTimestamp() < now).forEach(repository::delete);
 
-        List<ChargingSchedule> futureSchedules = allSchedules.stream()
-                .filter(s -> s.getStartTimestamp() > currentTime)
-                .collect(Collectors.toList());
-
-        futureSchedules.parallelStream().forEach(s -> {
-            if (adjustForCheaperFutureSchedule(s, futureSchedules, repository)) {
-                cancelTask(s.getId(), scheduledTasks);
-                LogFilter.logInfo(ChargingUtils.class, "Adjusted schedule due to cheaper future option: {} - {} (%.2f cents/kWh).",
-                        DATE_FORMAT.format(new Date(s.getStartTimestamp())),
-                        DATE_FORMAT.format(new Date(s.getEndTimestamp())), s.getPrice());
-            }
+        List<ChargingSchedule> future = all.stream().filter(s -> s.getStartTimestamp() > now).collect(Collectors.toList());
+        future.parallelStream().forEach(s -> {
+            if (adjustForCheaperFutureSchedule(s, future, repository)) cancelTask(s.getId(), scheduledTasks);
         });
 
-        List<ChargingSchedule> optimizedFuture = optimizeRemainingSchedules(futureSchedules);
+        List<ChargingSchedule> optimizedFuture = optimizeRemainingSchedules(future);
         optimizedFuture.parallelStream().forEach(repository::save);
-        LogFilter.logInfo(ChargingUtils.class, "Total schedules retained after cleanup: {}", optimizedFuture.size());
     }
 
     public int calculateDynamicMaxChargingPeriods(int totalPeriods, double priceRange, int currentRsoc) {
         double requiredCapacity = calculateRequiredCapacity(currentRsoc);
-        if (requiredCapacity <= 0) {
-            LogFilter.logInfo(ChargingUtils.class, "Battery already at or above target RSOC ({}%). No additional charging required.", targetStateOfCharge);
-            return 0;
-        }
+        if (requiredCapacity <= 0) return 0;
 
         int basePeriods = (int) Math.ceil(requiredCapacity / (chargingPointInWatt * SECONDS_PER_HOUR));
-        basePeriods += priceRange < 0.5 ? 2 : (priceRange > 2.0 ? -1 : 0);
-        basePeriods = totalPeriods <= 5 ? Math.min(basePeriods + 1, totalPeriods) :
-                totalPeriods > 10 ? Math.max(basePeriods - 1, MINIMUM_CHARGING_PERIODS) : basePeriods;
+        basePeriods += priceRange < 0.5 ? 2 : (priceRange > 3.0 ? -1 : 0);
+        basePeriods = totalPeriods <= 5 ? Math.min(basePeriods + 1, totalPeriods)
+                : totalPeriods > 10 ? Math.max(basePeriods - 1, MINIMUM_CHARGING_PERIODS) : basePeriods;
 
-        int dynamicMaxPeriods = Math.max(MINIMUM_CHARGING_PERIODS, Math.min(basePeriods, totalPeriods));
-        LogFilter.logInfo(ChargingUtils.class, "Calculated dynamic max periods: {} (Total periods: {}, Price range: %.2f, Current RSOC: {}%, Required Capacity: %.2f Wh)",
-                dynamicMaxPeriods, totalPeriods, priceRange, currentRsoc, requiredCapacity);
-        return dynamicMaxPeriods;
+        return Math.max(MINIMUM_CHARGING_PERIODS, Math.min(basePeriods, totalPeriods));
     }
 
     public Set<ChargingSchedule> validateSchedulesForCheaperOptions(Set<ChargingSchedule> schedules) {
-        if (schedules == null || schedules.isEmpty()) {
-            LogFilter.logWarn(ChargingUtils.class, "No schedules provided for validation. Returning an empty set.");
-            return Collections.emptySet();
-        }
+        if (schedules == null || schedules.isEmpty()) return Collections.emptySet();
 
         TreeSet<ChargingSchedule> validated = new TreeSet<>(Comparator.comparingDouble(ChargingSchedule::getPrice));
         List<ChargingSchedule> sorted = schedules.stream()
                 .sorted(Comparator.comparingDouble(ChargingSchedule::getPrice).thenComparingLong(ChargingSchedule::getStartTimestamp))
                 .collect(Collectors.toList());
 
-        AtomicReference<Double> cheapestPriceSoFar = new AtomicReference<>(Double.MAX_VALUE);
+        AtomicReference<Double> cheapest = new AtomicReference<>(Double.MAX_VALUE);
         validated.addAll(sorted.stream().filter(s -> isNight(s.getStartTimestamp())).limit(3).collect(Collectors.toList()));
 
         sorted.stream()
                 .filter(s -> !isNight(s.getStartTimestamp()))
-                .filter(s -> s.getPrice() < cheapestPriceSoFar.get())
-                .forEach(s -> {
-                    validated.add(s);
-                    cheapestPriceSoFar.set(s.getPrice());
-                    LogFilter.logInfo(ChargingUtils.class, "Accepted schedule {} - {} (%.2f cents/kWh).",
-                            DATE_FORMAT.format(new Date(s.getStartTimestamp())),
-                            DATE_FORMAT.format(new Date(s.getEndTimestamp())), s.getPrice());
-                });
+                .filter(s -> s.getPrice() < cheapest.get())
+                .forEach(s -> { validated.add(s); cheapest.set(s.getPrice()); });
 
-        LogFilter.logInfo(ChargingUtils.class, "Validated {} schedules after filtering.", validated.size());
         return validated;
     }
 
     public boolean isTaskUpToDate(ScheduledFuture<?> task, ChargingSchedule schedule) {
         long actualEndTime = System.currentTimeMillis() + task.getDelay(TimeUnit.MILLISECONDS);
-        return Math.abs(schedule.getEndTimestamp() - actualEndTime) <= 1000; // 1-second margin
+        return Math.abs(schedule.getEndTimestamp() - actualEndTime) <= 1000;
     }
 
     public List<MarketPrice> filterFuturePeriods(List<MarketPrice> periods) {
-        long currentTime = System.currentTimeMillis();
-        return periods.stream().filter(p -> p.getStartTimestamp() > currentTime).collect(Collectors.toList());
+        long now = System.currentTimeMillis();
+        return periods.stream().filter(p -> p.getStartTimestamp() > now).collect(Collectors.toList());
     }
 
     public double calculateDynamicTolerance(List<ChargingSchedule> allSchedules, double rsoc) {
-        double averagePrice = allSchedules.stream().mapToDouble(ChargingSchedule::getPrice).average().orElse(0.0);
-        double stdDev = Math.sqrt(allSchedules.stream().mapToDouble(s -> Math.pow(s.getPrice() - averagePrice, 2)).average().orElse(0.0));
+        double avg = allSchedules.stream().mapToDouble(ChargingSchedule::getPrice).average().orElse(0.0);
+        double std = Math.sqrt(allSchedules.stream().mapToDouble(s -> Math.pow(s.getPrice() - avg, 2)).average().orElse(0.0));
         int futureCount = (int) allSchedules.stream().filter(s -> s.getStartTimestamp() > System.currentTimeMillis()).count();
-        return calculateBaseTolerance(averagePrice, rsoc) + calculateVolatilityFactor(stdDev, averagePrice, futureCount);
+        return calculateBaseTolerance(avg, rsoc) + calculateVolatilityFactor(std, avg, futureCount);
     }
 
     public List<ChargingSchedule> optimizeRemainingSchedules(List<ChargingSchedule> schedules) {
-        double minPrice = schedules.stream().mapToDouble(ChargingSchedule::getPrice).min().orElse(Double.MAX_VALUE);
-        double range = schedules.stream().mapToDouble(ChargingSchedule::getPrice).max().orElse(minPrice) - minPrice;
+        double min = schedules.stream().mapToDouble(ChargingSchedule::getPrice).min().orElse(Double.MAX_VALUE);
+        double range = schedules.stream().mapToDouble(ChargingSchedule::getPrice).max().orElse(min) - min;
         return schedules.stream()
                 .sorted(Comparator.comparingDouble(ChargingSchedule::getPrice))
-                .filter(s -> range == 0 || ((s.getPrice() - minPrice) / range) < 0.3)
+                .filter(s -> range == 0 || ((s.getPrice() - min) / range) < 0.3)
                 .collect(Collectors.toList());
     }
 
-    // Helper methods
+    /**
+     * ======= Decide whether waiting is better than starting now =======
+     * Criteria:
+     * 1) Sufficient savings: candidate is cheaper than the current window (absolute or percentage threshold).
+     * 2) RSOC risk acceptable: projected RSOC by the candidate >= rsocMinFloor.
+     * 3) Enough time: accumulated windows from the candidate onward deliver enough energy to reach target SoC.
+     */
+    public Optional<ChargingSchedule> shouldWaitForCheaperWindow(ChargingSchedule currentWindow,
+                                                                 List<ChargingSchedule> futureWindows,
+                                                                 BatteryManagementService bms) {
+        long now = System.currentTimeMillis();
+        long latestStart = now + Math.max(0, waitMaxDelayMinutes) * 60_000L;
+
+        // Candidates: within acceptable delay and cheaper than the current window
+        List<ChargingSchedule> candidates = futureWindows.stream()
+                .filter(s -> s.getStartTimestamp() >= now && s.getStartTimestamp() <= latestStart)
+                .filter(s -> isSignificantlyCheaper(currentWindow.getPrice(), s.getPrice()))
+                .sorted(Comparator.comparingDouble(ChargingSchedule::getPrice)
+                        .thenComparingLong(ChargingSchedule::getStartTimestamp))
+                .toList();
+
+        if (candidates.isEmpty()) return Optional.empty();
+
+        int currentRsoc = bms.getRelativeStateOfCharge();
+
+        for (ChargingSchedule cand : candidates) {
+            // (2) RSOC projection until the candidate start time
+            int projectedRsocAtStart = estimateRsocAt(cand.getStartTimestamp(), currentRsoc, bms.getRsocHistory());
+            if (projectedRsocAtStart < rsocMinFloor) {
+                LogFilter.logDebug(ChargingUtils.class,
+                        "Wait-check: reject {} ({}): RSOC projection {}% < floor {}%.",
+                        DATE_FORMAT.format(new Date(cand.getStartTimestamp())), cand.getPrice(),
+                        projectedRsocAtStart, rsocMinFloor);
+                continue;
+            }
+
+            // (3) Check if time/power from the candidate window can reach target SoC
+            double deficitWh = Math.max(0.0, (targetStateOfCharge - projectedRsocAtStart) * (maxCapacityInWatt / 100.0));
+            double deliverableWh = computeDeliverableEnergyFrom(cand, futureWindows);
+            boolean timeSufficient = deliverableWh >= deficitWh;
+
+            if (!timeSufficient) {
+                LogFilter.logDebug(ChargingUtils.class,
+                        "Wait-check: reject {} ({} ct/kWh): deliverableWh {} < deficitWh {}.",
+                        DATE_FORMAT.format(new Date(cand.getStartTimestamp())), cand.getPrice(),
+                        Math.round(deliverableWh), Math.round(deficitWh));
+                continue;
+            }
+
+            // All criteria met -> choose to wait
+            LogFilter.logInfo(ChargingUtils.class,
+                    "Wait-check: choose to WAIT for {} (price {} < {}); RSOC@start={}%, deliverableWh~{}.",
+                    DATE_FORMAT.format(new Date(cand.getStartTimestamp())),
+                    String.format(Locale.ROOT, "%.2f", cand.getPrice()),
+                    String.format(Locale.ROOT, "%.2f", currentWindow.getPrice()),
+                    projectedRsocAtStart,
+                    Math.round(deliverableWh));
+            return Optional.of(cand);
+        }
+
+        return Optional.empty();
+    }
+
+    // --- Helper functions for shouldWaitForCheaperWindow ---
+
+    private boolean isSignificantlyCheaper(double currentPriceCt, double candidatePriceCt) {
+        double absDelta = currentPriceCt - candidatePriceCt;
+        double pctDelta = absDelta / Math.max(currentPriceCt, 0.0001);
+        return absDelta >= waitMinSavingsCt || pctDelta >= waitMinSavingsPct;
+    }
+
+    /**
+     * RSOC projection to a target time based on history.
+     * If history is missing/short, defaultRsocDropPerHour is used.
+     */
+    public int estimateRsocAt(long targetEpochMs, int currentRsoc, List<Map.Entry<Long, Integer>> history) {
+        if (targetEpochMs <= System.currentTimeMillis()) return currentRsoc;
+
+        double dropPerHour = deriveDropPerHour(history);
+        double hours = (targetEpochMs - System.currentTimeMillis()) / 3600_000.0;
+        int projected = (int) Math.round(currentRsoc - dropPerHour * hours);
+        return Math.max(0, Math.min(100, projected));
+    }
+
+    private double deriveDropPerHour(List<Map.Entry<Long, Integer>> history) {
+        if (history == null || history.size() < 2) return defaultRsocDropPerHour;
+
+        Map.Entry<Long, Integer> first = history.get(0);
+        Map.Entry<Long, Integer> last  = history.get(history.size() - 1);
+        long dtMs = Math.max(1L, last.getKey() - first.getKey());
+        double dh = dtMs / 3600_000.0;
+        if (dh <= 0.05) return defaultRsocDropPerHour; // ~3min
+
+        double drop = Math.max(0.0, first.getValue() - last.getValue());
+        // Smoothing: clamp to reasonable bounds
+        double perHour = Math.max(0.0, Math.min(20.0, drop / dh));
+        // Blend with default a bit to dampen outliers
+        return 0.7 * perHour + 0.3 * defaultRsocDropPerHour;
+    }
+
+    private double computeDeliverableEnergyFrom(ChargingSchedule startWindow, List<ChargingSchedule> allWindows) {
+        // Sum windows from startWindow onward (inclusive) that lie within ~12h after start
+        long horizonEnd = startWindow.getStartTimestamp() + 12L * 3600_000L;
+        long startTs = startWindow.getStartTimestamp();
+
+        List<ChargingSchedule> seq = allWindows.stream()
+                .filter(s -> s.getStartTimestamp() >= startTs && s.getStartTimestamp() <= horizonEnd)
+                .sorted(Comparator.comparingLong(ChargingSchedule::getStartTimestamp))
+                .collect(Collectors.toList());
+
+        double totalSeconds = 0.0;
+        for (ChargingSchedule s : seq) {
+            long dur = Math.max(0L, s.getEndTimestamp() - s.getStartTimestamp());
+            totalSeconds += dur / 1000.0;
+        }
+        // Energy (Wh) = P(W) * t(h)
+        return chargingPointInWatt * (totalSeconds / SECONDS_PER_HOUR);
+    }
+
+    // ---- helpers (existing) ----
 
     private static void validateNightHours(int start, int end) {
         if (start < 0 || start > 23 || end < 0 || end > 23) {
@@ -462,9 +483,9 @@ public class ChargingUtils {
     }
 
     private double calculateMedianPrice(List<MarketPrice> prices) {
-        List<Double> sorted = prices.stream().map(MarketPrice::getPriceInCentPerKWh).sorted().collect(Collectors.toList());
-        int size = sorted.size();
-        return size % 2 == 0 ? (sorted.get(size / 2 - 1) + sorted.get(size / 2)) / 2.0 : sorted.get(size / 2);
+        List<Double> sorted = prices.stream().map(MarketPrice::getPriceInCentPerKWh).sorted().toList();
+        int n = sorted.size();
+        return n % 2 == 0 ? (sorted.get(n / 2 - 1) + sorted.get(n / 2)) / 3.0 : sorted.get(n / 2);
     }
 
     private double[] calculatePriceStats(List<MarketPrice> prices) {
@@ -475,40 +496,21 @@ public class ChargingUtils {
     }
 
     private boolean isScheduleExpired(ChargingSchedule schedule, long currentTime) {
-        if (schedule.getEndTimestamp() < currentTime) {
-            LogFilter.logInfo(ChargingUtils.class, "Skipping expired schedule: {} - {} (%.2f cents/kWh).",
-                    DATE_FORMAT.format(new Date(schedule.getStartTimestamp())),
-                    DATE_FORMAT.format(new Date(schedule.getEndTimestamp())), schedule.getPrice());
-            return true;
-        }
-        return false;
+        return schedule.getEndTimestamp() < currentTime;
     }
 
     private boolean isScheduleOverpriced(ChargingSchedule schedule) {
-        if (schedule.getPrice() > maxAcceptableMarketPriceInCent) {
-            LogFilter.logInfo(ChargingUtils.class, "Skipping overpriced schedule: {} - {} at %.2f cents/kWh (max acceptable: {} cents/kWh).",
-                    DATE_FORMAT.format(new Date(schedule.getStartTimestamp())),
-                    DATE_FORMAT.format(new Date(schedule.getEndTimestamp())), schedule.getPrice(), maxAcceptableMarketPriceInCent);
-            return true;
-        }
-        return false;
+        return schedule.getPrice() > maxAcceptableMarketPriceInCent;
     }
 
     private boolean isScheduleOverlapping(ChargingSchedule schedule, Set<ChargingSchedule> validatedSchedules) {
-        boolean overlaps = validatedSchedules.stream().anyMatch(v ->
+        return validatedSchedules.stream().anyMatch(v ->
                 schedule.getStartTimestamp() < v.getEndTimestamp() && schedule.getEndTimestamp() > v.getStartTimestamp());
-        if (overlaps) {
-            LogFilter.logInfo(ChargingUtils.class, "Skipping overlapping schedule: {} - {} (%.2f cents/kWh).",
-                    DATE_FORMAT.format(new Date(schedule.getStartTimestamp())),
-                    DATE_FORMAT.format(new Date(schedule.getEndTimestamp())), schedule.getPrice());
-            return true;
-        }
-        return false;
     }
 
     private double calculateVolatilityFactor(double stdDev, double avgPrice, int futureCount) {
         double maxFactor = 0.03, minFactor = 0.01;
-        double volatilityAdjustment = stdDev / avgPrice;
+        double volatilityAdjustment = avgPrice == 0.0 ? 0.0 : (stdDev / avgPrice);
         double scheduleAdjustment = futureCount > 10 ? 0.005 : 0.0;
         return Math.min(maxFactor, Math.max(minFactor, minFactor + (volatilityAdjustment * 0.02) + scheduleAdjustment));
     }
